Se agregó la funcionalidad de conversión de audio a texto y respuesta utilizando modelos de IA en el nuevo archivo audiotext.py.

--- a/.env
+++ b/.env
@@ -13,10 +13,7 @@ SQLSERVER_DATABASE=inkludb
 ENCRYPTION_KEY=S1Zla2N6mRYOcoFvQONtsUytpMf0XJC8B9y4pgodcJk=
 
 # variables para la API de los agentes
-# API_DEEPSEEK
-API_DEEPSEEK_URL=https://api.deepseek.ai/v1/agents
-API_DEEPSEEK_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-# API_AGENT
-API_AGENT_URL=https://api.agent.com/v1/agents
-API_AGENT_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+DEEPSEEK_API_KEY = "sk-ae7619ef9e324719b65586e0def1e610"
+TAVILY_API_KEY= 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
+LANGSMITH_API_KEY= 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
+GEMINI_API_KEY= AIzaSyDJ3vdxxTq8_cR9BLD4iPIIJcZQ3vKQS_k
