--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@
 SECRET_KEY=CfcrzGFskyO6nnksDFZzp_CaShCWBM3stG2VvjXV-0c
 
 # variables para la base de datos
-SQLSERVER_USER= 
-SQLSERVER_PASSWORD= 
-SQLSERVER_HOST=
+SQLSERVER_USER= serverinklu
+SQLSERVER_PASSWORD= w8F$p2Jm#xKz7!LqRt5V9@yD3hNsE6gC
+SQLSERVER_HOST= 
 SQLSERVER_DATABASE=inkludb
 
 # variables para la encriptación
@@ -16,4 +16,4 @@ ENCRYPTION_KEY=S1Zla2N6mRYOcoFvQONtsUytpMf0XJC8B9y4pgodcJk=
 DEEPSEEK_API_KEY = "sk-ae7619ef9e324719b65586e0def1e610"
 TAVILY_API_KEY= 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
 LANGSMITH_API_KEY= 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
-GEMINI_API_KEY= AIzaSyDJ3vdxxTq8_cR9BLD4iPIIJcZQ3vKQS_k
+GOOGLE_API_KEY= AIzaSyDJ3vdxxTq8_cR9BLD4iPIIJcZQ3vKQS_k
