Corrige la declaración del método en el decorador de la ruta y actualiza el archivo de requisitos para incluir python-dotenv.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 # este archivo contiene las dependencias necesarias para el proyecto
+# depetencias de desarrollo
+python-dotenv
+
 # flask dependencias
 Flask
 flask_login
