Mejora en la función de conversión de audio a texto para extraer y corregir el contenido del mensaje. Se agregó manejo de errores y se mejoró la depuración.

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,11 @@ python-dotenv
 # Testing dependencias
 pytest 
 pytest-cov
+
+# Dependencias de ia
+langchain
+langgraph
+langchain-deepseek
+langchain-google-genai
+SpeechRecognition
+PyAudio
