feat: inicializar frontend en React con Vite, agregar autenticación y enrutamiento
Se creó el archivo package.json para dependencias y scripts del frontend.

Se agregó la configuración de Vite para compilaciones de desarrollo y producción.

Se implementó un servicio de autenticación utilizando Axios para solicitudes a la API.

Se desarrolló el componente de inicio de sesión (Login) con manejo de formularios y gestión de errores.

Se creó el componente ProtectedRoute para proteger el acceso al panel (Dashboard).

Se agregó el componente Dashboard como página de inicio tras iniciar sesión.

Se estilizaron los componentes usando CSS y Tailwind CSS para un diseño responsivo.

Se configuró el enrutamiento con react-router-dom para la navegación entre Login y Dashboard.

Se incluyeron recursos SVG para marca e íconos.

Se añadieron scripts de compilación e inicio para facilitar el desarrollo y despliegue.

Se actualizó el archivo requirements.txt para incluir los paquetes necesarios del backend en Flask

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,15 @@ Flask
 flask_login
 Flask-WTF
 flask-jwt-extended
-marshmallow
-marshmallow-sqlalchemy
+flask-cors
 
 # base de datos dependencias
 sqlalchemy
 flask-sqlalchemy
 flask-marshmallow
 flask-migrate
+marshmallow
+marshmallow-sqlalchemy
 pyodbc
 
 # incripición dependencias
