--- a/.env
+++ b/.env
@@ -16,4 +16,7 @@ ENCRYPTION_KEY=S1Zla2N6mRYOcoFvQONtsUytpMf0XJC8B9y4pgodcJk=
 DEEPSEEK_API_KEY =sk-ae7619ef9e324719b65586e0def1e610
 TAVILY_API_KEY= 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
 LANGSMITH_API_KEY= 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
-GOOGLE_API_KEY= AIzaSyDJ3vdxxTq8_cR9BLD4iPIIJcZQ3vKQS_k
+GOOGLE_CSE_ID=20376f21087844b39
+GOOGLE_API_KEY=AIzaSyA0-lCzH3pPTsDzlsmcl6UdGrvEh83dtfE
+SHADAI_API_KEY=5140fe86-ce9b-4c70-ab5b-a98c680b1058
+
