Refactor CV creation and job search functionality; integrate async processing and improve logging
- Consolidated CV creation logic into `creador_cv.py` with async functions for data extraction, validation, and PDF generation.
- Updated `main.py` to utilize new async tools for generating CVs and searching for job opportunities.
- Enhanced logging for better traceability of operations and error handling.
- Added new dependencies to `requirements.txt` for Google Vertex AI integration.

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ langchain
 langgraph
 langchain-deepseek
 langchain-google-genai
+langchain-google-vertexai
 langchain-community
 SpeechRecognition
 PyAudio
