Refactor ChatService to handle synchronous and asynchronous processing; improve error handling and logging. Update requirements to include langchain-tavily.

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ langchain-deepseek
 langchain-google-genai
 langchain-google-vertexai
 langchain-community
+langchain-tavily
 SpeechRecognition
 PyAudio
 pyttsx3
