Add job search functionality for people with disabilities
- Implemented a new script `busqueda_trabajos_discapacidad.py` to search for job listings for individuals with disabilities using Google Custom Search API and analyze results with DeepSeek API.
- Created a JSON output file `trabajos_discapacidad.json` to store raw search results and AI analysis.
- Updated `requirements.txt` to include necessary dependencies for the new functionality.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,13 @@ flask_login
 Flask-WTF
 flask-jwt-extended
 flask-cors
-Flask-Async
+flask-migrate
+Flask[Async]
 
 # base de datos dependencias
 sqlalchemy
 flask-sqlalchemy
 flask-marshmallow
-flask-migrate
 marshmallow
 marshmallow-sqlalchemy
 pyodbc
@@ -38,9 +38,7 @@ langchain-google-vertexai
 langchain-community
 langchain-tavily
 SpeechRecognition
-PyAudio
 pyttsx3
-pdfkit
 google-search-results
 shadai
 
